added other pages

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -11,6 +11,11 @@
         text-align: left;
     }
 
+    .links {
+        text-decoration: none;
+        color: #0D1C17;
+    }
+
     // Hero Section
     .hero {
         position: relative;
